# algobizsuite

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  check_compliance.sh  docker-compose.yml.example  entrypoint.sh  eslint.config.js  fix-line-endings.bat  install.bat  install.sh  pyproject.toml
C4-Documentation/: README.md  c4-code-addon-root.md  (+16 more)
addons/algorand_pera_payment/: __init__.py  __manifest__.py  const.py  hooks.py  pyproject.toml
addons/algorand_pera_payment/controllers/: __init__.py  main.py  pos_controller.py
addons/algorand_pera_payment/data/: payment_method_data.xml  payment_provider_data.xml
addons/algorand_pera_payment/migrations/19.0.1.0.0/: post-migration.py
addons/algorand_pera_payment/models/: __init__.py  payment_method.py  payment_provider.py  payment_transaction.py  pos_payment_method.py  res_config_settings.py
addons/algorand_pera_payment/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  HISTORY.md  INSTALL.md  USAGE.md
addons/algorand_pera_payment/security/: ir.model.access.csv
addons/algorand_pera_payment/static/description/: index.html
addons/algorand_pera_payment/static/src/app/: algorand_payment_popup.js  pos_payment_algorand.js  pos_payment_algorand.xml
addons/algorand_pera_payment/static/src/css/: payment_form.css
addons/algorand_pera_payment/static/src/js/: payment_form.js
addons/algorand_pera_payment/views/: payment_form.xml  payment_method_views.xml  payment_provider_views.xml  pos_payment_method_views.xml  shop_confirmation.xml
(+4 files in other folders)
